test for EC2(8)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #DB source url
-spring.datasource.url =
-spring.datasource.username =
-spring.datasource.password =
+spring.datasource.url = ${DATASOURCE_URL}
+spring.datasource.username = ${DATASOURCE_USERNAME}
+spring.datasource.password = ${DATASOURCE_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,5 +15,11 @@ spring.jpa.properties.hibernate.show_sql=true
 
 #oauth key
 spring.profiles.include=oauth-key
-test =
+test = ${TEST}
+client.id.google = ${CLIENT_ID_GOOGLE}
+redirect.uri.google = ${REDIRECT_URI_GOOGLE}
+secret.google = ${SECRET_GOOGLE}
+
+client.id.kakao = ${CLIENT_ID_KAKAO}
+redirect.uri.kakao = ${REDIRECT_URI_KAKAO}
 
