feat: make testdataset

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 #oauth key
 spring.profiles.include=oauth-key
+
+#batch
+spring.batch.jdbc.initialize-schema=always
