--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
 	id 'org.springframework.boot' version '2.7.10'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
+dependencyManagement {
+	imports {
+		mavenBom 'io.awspring.cloud:spring-cloud-aws-dependencies:2.3.3'
+	}
+}
 
 group = 'com.cherrypicker'
 version = '0.0.1-SNAPSHOT'
@@ -25,8 +30,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'org.yaml:snakeyaml:1.28'
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws-parameter-store-config'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'mysql:mysql-connector-java:8.0.26'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
@@ -34,4 +42,8 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jar {
+	enabled = false
 }
