add resources path into gradle

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,14 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+sourceSets {
+	main {
+		resources {
+			srcDirs = ["src/main/resources"]
+		}
+	}
+}
+
 jar {
 	enabled = false
 }
