--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,10 @@ dependencies {
 	implementation 'org.yaml:snakeyaml:1.28'
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws-parameter-store-config'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.apache.commons:commons-csv:1.9'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.27'
 	implementation 'mysql:mysql-connector-java:8.0.26'
+	implementation 'org.apache.commons:commons-csv:1.9'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
