--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'com.opencsv:opencsv:5.5.2'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'io.jsonwebtoㅈken:jjwt:0.9.1'
 	implementation 'org.yaml:snakeyaml:1.28'
 	implementation 'io.awspring.cloud:spring-cloud-starter-aws-parameter-store-config'
 	compileOnly 'org.projectlombok:lombok'
