--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'com.opencsv:opencsv:5.5.2'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'org.yaml:snakeyaml:1.28'
