--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:db;MODE=MYSQL
+    url: jdbc:h2:tcp://localhost/~/cherrypickertest
     username: sa
     password:
 
